--- a/src/scss/pages/_instructorcourses.scss
+++ b/src/scss/pages/_instructorcourses.scss
@@ -1,4 +1,5 @@
 .instructor-courses {
+  padding-top: 50px;
   &-instructor {
     background: #ffffff;
     border-radius: 6px;
@@ -211,7 +212,6 @@
       h6 {
         margin-bottom: 0 !important;
         color: rgba($color: #42414b, $alpha: 0.9) !important;
-
         font-weight: 500;
         font-size: 14px !important;
       }
@@ -271,14 +271,14 @@
 // Rating-Number
 .rating-number {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   width: 185px;
   height: 170px;
-  background-color: white;
   border-radius: 5px;
   text-align: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: white;
   h2 {
     font-size: 56px;
     line-height: 70px;
@@ -331,18 +331,18 @@
       margin: 0px 15px;
       width: 300px;
       height: 5px;
-      background-color: white;
       border-radius: 5px;
       position: relative;
       overflow: hidden;
+      background-color: white;
 
       .rating-width {
         position: absolute;
         top: 0;
         left: 0;
         height: 5px;
-        background: #1089ff;
         border-radius: 5px;
+        background: #1089ff;
       }
     }
 
@@ -380,8 +380,8 @@
   &-heading {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     margin-bottom: 15px;
+    justify-content: space-between;
 
     h5 {
       color: #42414b;
@@ -506,13 +506,13 @@
     }
 
     textarea {
-      margin-bottom: 20px;
-      border: 1px solid rgba($color: #8f8fa3, $alpha: 0.3);
-      box-sizing: border-box;
-      border-radius: 4px;
       resize: none;
       height: 112px;
+      margin-bottom: 20px;
+      border-radius: 4px;
       padding: 16px 20px;
+      box-sizing: border-box;
+      border: 1px solid rgba($color: #8f8fa3, $alpha: 0.3);
       &::placeholder {
         font-size: 16px;
         line-height: 24px;
